--- a/mydogs.html
+++ b/mydogs.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">          
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./static/CSS/style.css">
-    <link rel="stylesheet" href="./static/SCSS/output.css">
     <title>My Dogs</title>
 </head>
 <body>
@@ -13,10 +12,12 @@
         <!-- Barra de navegación -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">        
             <div class="container">
-                <a class="navbar-brand" href="index.html">
-                    <img src="static/images/logo.webp" alt="logo" width="50" height="50" class="d-inline-block align-text-top">
-                    Wao!
-                </a>
+                <div class="d-flex">
+                    <a class="navbar-brand" href="index.html">
+                        <img src="static/images/logo.webp" alt="logo" width="50" height="50" class="d-inline-block align-text-top">
+                        Wao!
+                    </a>
+                </div>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -41,7 +42,7 @@
                 </div>
             </div>
         </nav>        
-    </div>  
+    </div>   
     <main>    
         <section>
             <div class="container">
@@ -123,10 +124,9 @@
         <footer class="bg-dark text-white text-center py-3">
             <p>&copy; 2023 My First Website. All rights reserved.</p>
         </footer>
-        
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
     </section>
 </body>
 </html>
