--- a/mydogs.html
+++ b/mydogs.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">          
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./static/CSS/style.css">
+    <link rel="stylesheet" href="./static/SCSS/output.css">
     <title>My Dogs</title>
 </head>
 <body>
@@ -12,12 +13,10 @@
         <!-- Barra de navegación -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">        
             <div class="container">
-                <div class="d-flex">
-                    <a class="navbar-brand" href="index.html">
-                        <img src="static/images/logo.webp" alt="logo" width="50" height="50" class="d-inline-block align-text-top">
-                        Wao!
-                    </a>
-                </div>
+                <a class="navbar-brand" href="index.html">
+                    <img src="static/images/logo.webp" alt="logo" width="50" height="50" class="d-inline-block align-text-top">
+                    Wao!
+                </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -42,7 +41,7 @@
                 </div>
             </div>
         </nav>        
-    </div>   
+    </div>  
     <main>    
         <section>
             <div class="container">
@@ -120,13 +119,12 @@
             </div>
         </section>
     </main>
-    <section>
-        <footer class="bg-dark text-white text-center py-3">
-            <p>&copy; 2023 My First Website. All rights reserved.</p>
-        </footer>
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
-    </section>
+    <footer class="bg-dark text-white text-center py-3">
+        <p>&copy; 2023 My First Website. All rights reserved.</p>
+    </footer>
+    
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
