--- a/mydogs.html
+++ b/mydogs.html
@@ -53,7 +53,11 @@
                     <div class="col-md-6">
                         <div class="indice custom-box">
                             <div class="d-flex align-items-center"> <!-- Agregamos una clase d-flex y align-items-center -->
-                                <img src="static/images/Vela_.webp" alt="Vela" class="img-fluid header-image">
+                                <div class="col-md-6">
+                                    <div class="indice custom-box">                                 
+                                        <img src="static/images/Vela_.webp" alt="Vela" class="img-fluid header-image">
+                                    </div>
+                                </div>
                                 <table class="table ml-3"> 
                                     <tbody>
                                         <tr>
@@ -86,7 +90,11 @@
                     <div class="col-md-6">
                         <div class="indice custom-box">
                             <div class="d-flex align-items-center"> <!-- Agregamos una clase d-flex y align-items-center -->
-                                <img src="static/images/Kira_.webp" alt="Kira" class="img-fluid header-image">
+                                <div class="col-md-6">
+                                    <div class="indice custom-box">                                 
+                                        <img src="static/images/Kira_.webp" alt="Kira" class="img-fluid header-image">
+                                    </div>
+                                </div>
                                 <table class="table ml-3">
                                     <tbody>
                                         <tr>
