--- a/mydogs.html
+++ b/mydogs.html
@@ -58,31 +58,35 @@
                                         <img src="static/images/Vela_.webp" alt="Vela" class="img-fluid header-image">
                                     </div>
                                 </div>
-                                <table class="table ml-3"> 
-                                    <tbody>
-                                        <tr>
-                                            <td>Name:</td>
-                                            <td class="word">Vela</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Breed:</td>
-                                            <td class="word">Siberian Husky</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Age:</td>
-                                            <td class="word">4 years</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Sex:</td>
-                                            <td class="word">female</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Color:</td>
-                                            <td class="word">Agouti and black</td>
-                                            <td rowspan="1"><img src="static/images/Color_B_W_B.webp" alt="Color Kira" class="img-fluid"></td>
-                                        </tr>
-                                    </tbody>
-                                </table>
+                                <div class="col-md-6">
+                                    <div class="indice custom-box">                                 
+                                        <table class="table ml-3"> 
+                                            <tbody>
+                                                <tr>
+                                                    <td>Name:</td>
+                                                    <td class="word">Vela</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Breed:</td>
+                                                    <td class="word">Siberian Husky</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Age:</td>
+                                                    <td class="word">4 years</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Sex:</td>
+                                                    <td class="word">female</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Color:</td>
+                                                    <td class="word">Agouti and black</td>
+                                                    <td rowspan="1"><img src="static/images/Color_B_W_B.webp" alt="Color Kira" class="img-fluid"></td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
                             </div>
                             <p>This is Bella, she's Kira's mother. She likes to run, she loves to play with the balls, she is a great friend, and she is an incredible mother. She raised and took care of her three pups, of which I only stayed with Kira.</p>                        
                         </div>                     
