--- a/mydogs.html
+++ b/mydogs.html
@@ -99,31 +99,35 @@
                                         <img src="static/images/Kira_.webp" alt="Kira" class="img-fluid header-image">
                                     </div>
                                 </div>
-                                <table class="table ml-3">
-                                    <tbody>
-                                        <tr>
-                                            <td>Name:</td>
-                                            <td class="word">Kira</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Breed:</td>
-                                            <td class="word">Siberian Husky</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Age:</td>
-                                            <td class="word">5 months</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Sex:</td>
-                                            <td class="word">female</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Color:</td>
-                                            <td class="word">White and gray</td>
-                                            <td rowspan="1"><img src="static/images/Color_G_W.webp" alt="Color Kira" class="img-fluid"></td>
-                                        </tr>                                
-                                    </tbody>
-                                </table>
+                                <div class="col-md-6">
+                                    <div class="indice custom-box">                                  
+                                        <table class="table ml-3">
+                                            <tbody>
+                                                <tr>
+                                                    <td>Name:</td>
+                                                    <td class="word">Kira</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Breed:</td>
+                                                    <td class="word">Siberian Husky</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Age:</td>
+                                                    <td class="word">5 months</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Sex:</td>
+                                                    <td class="word">female</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Color:</td>
+                                                    <td class="word">White and gray</td>
+                                                    <td rowspan="1"><img src="static/images/Color_G_W.webp" alt="Color Kira" class="img-fluid"></td>
+                                                </tr>                                
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
                             </div>
                             <p>This is Kira, she's the Vela son's. She loves play with Vela, but sometimes she is very naughty. She was the only one who stayed with me of her three sisters</p>
                         </div>                                     
