--- a/mydogs.html
+++ b/mydogs.html
@@ -37,7 +37,8 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="mydogs.html">My Dogs</a>
-                        </li>                    </ul>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </nav>        
@@ -50,87 +51,100 @@
                 <!-- Grid Layout de Bootstrap: Dos columnas -->
                 <div class="row">
                     <div class="col-md-6">
-                        <div class="indice custom-box d-flex">
-                            <div class="col-md-8 pr-0">
-                                <img src="static/images/Vela_.webp" alt="Vela" class="img-fluid header-image">
-                            </div>
-                            <div class="col-md-4 pl-0">
-                                <table class="table ml-3"> 
-                                    <tbody>
-                                        <tr>
-                                            <td>Name:</td>
-                                            <td class="word">Vela</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Breed:</td>
-                                            <td class="word">Siberian Husky</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Age:</td>
-                                            <td class="word">4 years</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Sex:</td>
-                                            <td class="word">female</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Color:</td>
-                                            <td class="word">Agouti and black</td>
-                                            <td rowspan="1"><img src="static/images/Color_B_W_B.webp" alt="Color Kira" class="img-fluid"></td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
-                        <p>This is Bella, she's Kira's mother. She likes to run, she loves to play with the balls, she is a great friend, and she is an incredible mother. She raised and took care of her three pups, of which I only stayed with Kira.</p>
+                        <div class="indice custom-box">
+                                <div class="col-md-8">
+                                    <div class="indice custom-box">                                 
+                                        <img src="static/images/Vela_.webp" alt="Vela" class="img-fluid header-image">
+                                    </div>
+                                </div>
+                                <p></p>
+                                <p></p>
+                                <p></p>
+                                <div class="col-md-6">
+                                    <div class="indice custom-box">                                 
+                                        <table class="table ml-3"> 
+                                            <tbody>
+                                                <tr>
+                                                    <td>Name:</td>
+                                                    <td class="word">Vela</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Breed:</td>
+                                                    <td class="word">Siberian Husky</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Age:</td>
+                                                    <td class="word">4 years</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Sex:</td>
+                                                    <td class="word">female</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Color:</td>
+                                                    <td class="word">Agouti and black</td>
+                                                    <td rowspan="1"><img src="static/images/Color_B_W_B.webp" alt="Color Kira" class="img-fluid"></td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>                            
+                            <p>This is Bella, she's Kira's mother. She likes to run, she loves to play with the balls, she is a great friend, and she is an incredible mother. She raised and took care of her three pups, of which I only stayed with Kira.</p>                        
+                        </div>                     
                     </div>
-                    <p></p>
-                    <p></p>
-                    <p></p>
                     <div class="col-md-6">
-                        <div class="indice custom-box d-flex">
-                            <div class="col-md-8 pr-0">
-                                <img src="static/images/Kira_.webp" alt="Kira" class="img-fluid header-image">
-                            </div>
-                            <div class="col-md-4 pl-0">
-                                <table class="table ml-3">
-                                    <tbody>
-                                        <tr>
-                                            <td>Name:</td>
-                                            <td class="word">Kira</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Breed:</td>
-                                            <td class="word">Siberian Husky</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Age:</td>
-                                            <td class="word">5 months</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Sex:</td>
-                                            <td class="word">female</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Color:</td>
-                                            <td class="word">White and gray</td>
-                                            <td rowspan="1"><img src="static/images/Color_G_W.webp" alt="Color Kira" class="img-fluid"></td>
-                                        </tr>                                
-                                    </tbody>                                </table>
-                            </div>
-                        </div>
-                        <p>This is Kira, she's the Vela son's. She loves play with Vela, but sometimes she is very naughty. She was the only one who stayed with me of her three sisters</p>
+                        <div class="indice custom-box">
+                                <div class="col-md-8">
+                                    <div class="indice custom-box">                                 
+                                        <img src="static/images/Kira_.webp" alt="Kira" class="img-fluid header-image">
+                                    </div>
+                                </div>
+                                <p></p>
+                                <p></p>
+                                <p></p>
+                                <div class="col-md-6">
+                                    <div class="indice custom-box">                                  
+                                        <table class="table ml-3">
+                                            <tbody>
+                                                <tr>
+                                                    <td>Name:</td>
+                                                    <td class="word">Kira</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Breed:</td>
+                                                    <td class="word">Siberian Husky</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Age:</td>
+                                                    <td class="word">5 months</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Sex:</td>
+                                                    <td class="word">female</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Color:</td>
+                                                    <td class="word">White and gray</td>
+                                                    <td rowspan="1"><img src="static/images/Color_G_W.webp" alt="Color Kira" class="img-fluid"></td>
+                                                </tr>                                
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                            <p>This is Kira, she's the Vela son's. She loves play with Vela, but sometimes she is very naughty. She was the only one who stayed with me of her three sisters</p>
+                        </div>                                     
                     </div>
                 </div>
             </div>
         </section>
     </main>
-    <footer class="bg-dark text-white text-center py-3">
-        <p>&copy; 2023 My First Website. All rights reserved.</p>
-    </footer>
-    
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+    <section>
+        <footer class="bg-dark text-white text-center py-3">
+            <p>&copy; 2023 My First Website. All rights reserved.</p>
+        </footer>
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+    </section>
 </body>
 </html>
